--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_list_jstree.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_list_jstree.html
@@ -33,6 +33,19 @@
 							</xf:popup>
 							<xf:delete href="{{ link('warnings/category-delete', null, { 'warning_category_id': $category.warning_category_id }) }}" />
 						</xf:datarow>
+						<xf:foreach loop="$category.WarningDefinitions" value="$warningDefinition">
+							<xf:datarow>
+								<xf:cell class="dataList-cell--link dataList-cell--main" hash="warning_definition{$warningDefinition.warning_definition_id}">
+									<a href="{{ link('warnings/edit', $warningDefinition) }}">
+										<div class="u-depth{{ $treeEntry.depth + 1 }}">
+											<div class="dataList-mainRow">{$warningDefinition.title}</div>
+										</div>
+									</a>
+								</xf:cell>
+								<xf:cell>&nbsp;</xf:cell>
+								<xf:delete href="{{ link('warnings/delete', $warningDefinition) }}" />
+							</xf:datarow>
+						</xf:foreach>
 					</xf:foreach>
 				</xf:datalist>
 			</div>
