--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_delete.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_delete.html
@@ -1,5 +1,3 @@
 <xf:title>{{ phrase('confirm_action') }}</xf:title>
 
-<xf:macro template="category_tree_macros" name="category_delete_form"
-	arg-linkPrefix="warnings/category"
-	arg-category="{$category}" />
+<xf:macro template="sv_warning_improvements_category_tree_macros" name="category_delete_form" arg-category="{$category}" />
