--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_list_jstree.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_list_jstree.html
@@ -4,53 +4,4 @@
 <xf:js addon="SV/WarningImprovements" src="sv/jstree/jstree.js" min="1" />
 <xf:js addon="SV/WarningImprovements" src="sv/warningimprovements/warnings.js" min="1" />
 
-<xf:if is="$warnings is not empty">
-	<div class="block">
-		<div class="block-outer">
-			<xf:macro template="filter_macros" name="quick_filter" arg-key="{$filterKey}" arg-class="block-outer-opposite" />
-		</div>
-		<div class="block-container">
-			<div class="block-body">
-				<xf:datalist>
-					<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
-						<xf:set var="$category" value="{$treeEntry.record}" />
-						<xf:datarow>
-							<xf:cell class="dataList-cell--link dataList-cell--main" hash="{$category.warning_category_id}">
-								<a href="{{ link('warnings/category-edit', null, { 'warning_category_id': $category.warning_category_id }) }}">
-									<div class="u-depth{$treeEntry.depth}">
-										<div class="dataList-mainRow">{$category.title}</div>
-									</div>
-								</a>
-							</xf:cell>
-							<xf:popup class="dataList-cell--action u-hideMedium" label="{{ phrase('add...') }}">
-								<div class="menu" data-menu="menu" aria-hidden="true">
-									<div class="menu-content">
-										<h3 class="menu-header">{{ phrase('add...') }}</h3>
-										<a href="{{ link('warnings/category-add', null, { 'parent_category_id': $category.parent_category_id }) }}" class="menu-linkRow">{{ phrase('sibling') }}</a>
-										<a href="{{ link('warnings/category-add', null, { 'parent_category_id': $category.warning_category_id}) }}" class="menu-linkRow">{{ phrase('child') }}</a>
-									</div>
-								</div>
-							</xf:popup>
-							<xf:delete href="{{ link('warnings/category-delete', null, { 'warning_category_id': $category.warning_category_id }) }}" />
-						</xf:datarow>
-						<xf:foreach loop="$category.WarningDefinitions" value="$warningDefinition">
-							<xf:datarow>
-								<xf:cell class="dataList-cell--link dataList-cell--main" hash="warning_definition{$warningDefinition.warning_definition_id}">
-									<a href="{{ link('warnings/edit', $warningDefinition) }}">
-										<div class="u-depth{{ $treeEntry.depth + 1 }}">
-											<div class="dataList-mainRow">{$warningDefinition.title}</div>
-										</div>
-									</a>
-								</xf:cell>
-								<xf:cell>&nbsp;</xf:cell>
-								<xf:delete href="{{ link('warnings/delete', $warningDefinition) }}" />
-							</xf:datarow>
-						</xf:foreach>
-					</xf:foreach>
-				</xf:datalist>
-			</div>
-		</div>
-	</div>
-<xf:else />
-	<div class="blockMessage">{{ phrase('no_warnings_have_been_defined') }}</div>
-</xf:if>
+<xf:macro template="sv_warning_improvements_category_tree_macros" name="category_list" arg-warnings="{$warnings}" arg-categoryTree="{$categoryTree}" />
