Super-semi warning sorting support

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_sort.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_category_sort.html
@@ -1,4 +1,3 @@
 <xf:title>{{ phrase('sort_categories') }}</xf:title>
 
-<xf:macro template="sv_warning_improvements_category_tree_macros" name="sortable_form"
-	arg-categoryTree="{$categoryTree}" />
+<xf:macro template="sv_warning_improvements_category_tree_macros" name="sortable_form" arg-categoryTree="{$categoryTree}" />
