ok this is the real semi-working sort commit

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_warning_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_warning_tree_macros.html
@@ -24,23 +24,27 @@
 	</div>
 </xf:macro>
 
-<xf:macro name="sortable_warning_list" arg-warnings="{{ null }}">
-	<ol class="nestable-list">
-		<xf:foreach loop="$warnings" value="$warning">
-			<li class="nestable-item" data-id="{$warning.warning_definition_id}">
-				<div class="nestable-handle" aria-label="{{ phrase('drag_handle') }}"><i class="fa fa-bars" aria-hidden="true"></i></div>
-				<div class="nestable-content">{$warning.MasterTitle.phrase_text}</div>
-			</li>
-		</xf:foreach>
-	</ol>
+<xf:macro name="sortable_warning_list" arg-warnings="!" arg-category="!">
+	<div class="nestable-container" data-xf-init="nestable" data-value-target="#js-warning-{$category.warning_category_id}-Data">
+		<ol class="nestable-list">
+			<xf:foreach loop="$warnings" value="$warning">
+				<li class="nestable-item" data-id="{$warning.warning_definition_id}">
+					<div class="nestable-handle" aria-label="{{ phrase('drag_handle') }}"><i class="fa fa-bars" aria-hidden="true"></i></div>
+					<div class="nestable-content">{$warning.MasterTitle.phrase_text}</div>
+				</li>
+			</xf:foreach>
+			<xf:hiddenval name="navigation" value="" id="js-warning-{$category.warning_category_id}-Data" />
+		</ol>
+	</div>
 </xf:macro>
 
 <xf:macro name="sortable_list_entry" arg-child="!" arg-children="!" arg-warnings="!">
 	<li class="category-item" data-id="{$child.id}">
 		<div class="category-content block-minorHeader">{$child.record.title}</div>
 		<xf:if is="{$warnings.{$child.id}} is not empty">
-			<xf:macro name="sortable_warning_list" arg-warnings="{$warnings.{$child.id}}" />
+			<xf:macro name="sortable_warning_list" arg-warnings="{$warnings.{$child.id}}" arg-category="{$child.record}" />
 		</xf:if>
+		
 		<xf:if is="$child.children is not empty">
 			<xf:macro name="sortable_list" arg-children="{$child.children}" arg-warnings="{$warnings}" />
 		</xf:if>
