--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_category_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_category_tree_macros.html
@@ -28,19 +28,21 @@
 								</xf:popup>
 								<xf:delete href="{{ link('warnings/category-delete', null, { 'warning_category_id': $category.warning_category_id }) }}" />
 							</xf:datarow>
-							<xf:foreach loop="$category.WarningDefinitions" value="$warningDefinition">
-								<xf:datarow>
-									<xf:cell class="dataList-cell--link dataList-cell--main" hash="warning_definition{$warningDefinition.warning_definition_id}">
-										<a href="{{ link('warnings/edit', $warningDefinition) }}">
-											<div class="u-depth{{ $treeEntry.depth + 1 }}">
-												<div class="dataList-mainRow">{$warningDefinition.title}</div>
-											</div>
-										</a>
-									</xf:cell>
-									<xf:cell>&nbsp;</xf:cell>
-									<xf:delete href="{{ link('warnings/delete', $warningDefinition) }}" />
-								</xf:datarow>
-							</xf:foreach>
+							<xf:if is="{$warnings.{$category.warning_category_id}} is not empty">
+								<xf:foreach loop="{$warnings.{$category.warning_category_id}}" value="$warningDefinition">
+									<xf:datarow>
+										<xf:cell class="dataList-cell--link dataList-cell--main" hash="warning_definition{$warningDefinition.warning_definition_id}">
+											<a href="{{ link('warnings/edit', $warningDefinition) }}">
+												<div class="u-depth{{ $treeEntry.depth + 1 }}">
+													<div class="dataList-mainRow">{$warningDefinition.title} ({$warningDefinition.sv_display_order})</div>
+												</div>
+											</a>
+										</xf:cell>
+										<xf:cell>&nbsp;</xf:cell>
+										<xf:delete href="{{ link('warnings/delete', $warningDefinition) }}" />
+									</xf:datarow>
+								</xf:foreach>
+							</xf:if>
 						</xf:foreach>
 					</xf:datalist>
 				</div>
