Remove visible display order

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_category_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_category_tree_macros.html
@@ -34,7 +34,7 @@
 										<xf:cell class="dataList-cell--link dataList-cell--main" hash="warning_definition{$warningDefinition.warning_definition_id}">
 											<a href="{{ link('warnings/edit', $warningDefinition) }}">
 												<div class="u-depth{{ $treeEntry.depth + 1 }}">
-													<div class="dataList-mainRow">{$warningDefinition.title} ({$warningDefinition.sv_display_order})</div>
+													<div class="dataList-mainRow">{$warningDefinition.title}</div>
 												</div>
 											</a>
 										</xf:cell>
