--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_edit.html
@@ -1,8 +1,10 @@
 <hr class="formRowSep" /><xf:comment>Required to give seperator similar to XF1</xf:comment>
 
-<xf:selectrow name="sv_warning_category_id" value="{$action.sv_warning_category_id}}" label="{{ phrase('sv_warning_category') }}">
+<xf:selectrow name="sv_warning_category_id" value="{$action.sv_warning_category_id}" label="{{ phrase('sv_warning_category:') }}">
 	<xf:option value="0">{{ phrase('(none)') }}</xf:option>
-	<xf:option source="$warningCategories" />
+	<xf:foreach loop="$categoryTree.getFlattened(0)" value="$treeEntry">
+		<xf:option value="{$treeEntry.record.warning_category_id}">{{ repeat('--', $treeEntry.depth) }} {$treeEntry.record.title}</xf:option>
+	</xf:foreach>
 </xf:selectrow>
 
 <hr class="formRowSep" /><xf:comment>Required to give seperator similar to XF1</xf:comment>
