Show actions in category as well

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_list.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_action_list.html
@@ -1,51 +1,1 @@
-<xf:if is="{$warningActionCategories}">
-	<xen:form action="{{ link('warnings') }}" class="section">
-		<h2 class="subHeading">
-			{{ phrase('warning_actions') }}
-		</h2>
-
-		<ol class="FilterList Scrollable">
-			<xf:foreach loop="$warningActionCategories" key="$warningActionCategoryId" value="$warningActionCategory">
-				<li>
-					<h3 class="textHeading" style="text-align: right">
-						<span style="float: left">
-							<xf:if is="{$warningActionCategoryId}">
-								<a href="{xen:adminlink warnings/category-edit, '', 'warning_category_id={$warningActionCategoryId}'}" title="{{ phrase('edit_category') }}">{$warningActionCategory.title}</a>
-							<xf:else />
-								{{ phrase('sv_global_warning_actions') }}
-							</xf:if>
-						</span>
-						<span style="font-weight: normal">
-							<xf:if is="{$warningActionCategoryId}">
-								<a href="{xen:adminlink warnings/category-edit, '', 'warning_category_id={$warningActionCategoryId}'}" title="{{ phrase('edit_category') }}">{{ phrase('edit') }}</a>
-								|
-							</xf:if>
-							<a href="{xen:adminlink warnings/action-add, '', 'warning_category_id={$warningActionCategoryId}'}">{{ phrase('create_new_warning_action') }}</a>
-						</span>
-					</h3>
-					<ol>
-						<xf:foreach loop="$warningActionCategory.actions" value="$action">
-							<xen:listitem
-								id="action-{$action.warning_action_id}"
-								label="{{ phrase('points') }}: {$action.points}"
-								href="{xen:adminlink warnings/action/edit, $action}"
-								delete="{xen:adminlink warnings/action/delete, $action}"
-							>
-								<xen:snippet>
-									{xen:if "{$action.action} == 'ban'", '{{ phrase('ban') }}',
-										{xen:if "{$action.action} == 'discourage'", '{{ phrase('discourage') }}',
-										{xen:if "{$action.action} == 'groups'", '{{ phrase('add_to_selected_groups') }}'}
-									}},
-									{xen:if "{$action.action_length_type} == 'permanent'", '{{ phrase('permanent') }}',
-										{xen:if "{$action.action_length_type} == 'points'", '{{ phrase('while_at_or_above_points_threshold') }}',
-										'{{ phrase('temporary') }}'
-									}}
-								</xen:snippet>
-							</xen:listitem>
-						</xf:foreach>
-					</ol>
-				</li>
-			</xf:foreach>
-		</ol>
-	</xen:form>
-</xf:if>
+<xf:macro template="sv_warning_improvements_action_tree_macros" name="action_list" arg-globalActions="{$globalActions}" arg-actions="{$actions}" arg-categoryTree="{$categoryTree}" />
