Put "Warning actions" header back so things look clean

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_action_tree_macros.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_improvements_action_tree_macros.html
@@ -5,6 +5,7 @@
 				<xf:macro template="filter_macros" name="quick_filter" arg-key="warning-category" arg-class="block-outer-opposite" />
 			</div>
 			<div class="block-container">
+				<h2 class="block-header">{{ phrase('warning_actions') }}</h2>
 				<div class="block-body">
 					<xf:datalist>
 						<xf:if is="$globalActions">
