List warning escalating defaults

--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_escalating_defaults.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_escalating_defaults.html
@@ -1,33 +1,36 @@
-<xf:if is="{$warningEscalatingDefaults}">
-	<xen:form action="{{ link('warnings') }}" class="section">
-		<h2 class="subHeading">
-			{{ phrase('warning_escalating_defaults') }}
-		</h2>
-
-		<ol class="FilterList Scrollable">
-			<xf:foreach loop="$warningEscalatingDefaults" value="$warningDefault">
-				<xen:set var="$expiry_extension_phrase">{{ phrase('x_days', {'days':'{$warningDefault.expiry_extension}'}) }}</xen:set>
-				<xf:if is="{$warningDefault.expiry_type} == 'weeks'">
-					<xen:set var="$expiry_extension_phrase">{{ phrase('sv_x_weeks', {'weeks':'{$warningDefault.expiry_extension}'}) }}</xen:set>
-				</xf:if>
-				<xf:if is="{$warningDefault.expiry_type} == 'months'">
-					<xen:set var="$expiry_extension_phrase">{{ phrase('x_months', {'months':'{$warningDefault.expiry_extension}'}) }}</xen:set>
-				</xf:if>
-				<xf:if is="{$warningDefault.expiry_type} == 'years'">
-					<xen:set var="$expiry_extension_phrase">{{ phrase('sv_x_years', {'years':'{$warningDefault.expiry_extension}'}) }}</xen:set>
-				</xf:if>
-				<xen:listitem
-					id="warning_default-{$warningDefault.warning_default_id}"
-				    label="{{ phrase('points') }}: {$warningDefault.threshold_points}"
-					href="{xen:adminlink warnings/default/edit, $warningDefault}"
-					delete="{xen:adminlink warnings/default/delete, $warningDefault}"
-				>
-					<xen:snippet>
-						{{ phrase('sv_increase_default_expiry_by_x', {'length':'{$expiry_extension_phrase}'}) }}
-						{xen:if "{$warningDefault.active}", ", {{ phrase('sv_warning_default_is_active') }}" }
-					</xen:snippet>
-				</xen:listitem>
-			</xf:foreach>
-		</ol>
-	</xen:form>
+<xf:if is="$escalatingDefaults is not empty">
+	<div class="block">
+		<div class="block-container">
+			<h2 class="block-header">{{ phrase('warning_escalating_defaults') }}</h2>
+			<div class="block-body">
+				<xf:datalist>
+					<xf:foreach loop="$escalatingDefaults" value="$escalatingDefault">
+						<xf:set var="$expiry_extension_phrase">{{ phrase('x_days', {'days': $escalatingDefault.expiry_extension}) }}</xf:set>
+						<xf:if is="{$escalatingDefault.expiry_type} == 'weeks'">
+							<xf:set var="$expiry_extension_phrase">{{ phrase('sv_x_weeks', {'weeks': $escalatingDefault.expiry_extension}) }}</xf:set>
+						</xf:if>
+						<xf:if is="{$escalatingDefault.expiry_type} == 'months'">
+							<xf:set var="$expiry_extension_phrase">{{ phrase('x_months', {'months': $escalatingDefault.expiry_extension}) }}</xf:set>
+						</xf:if>
+						<xf:if is="{$escalatingDefault.expiry_type} == 'years'">
+							<xf:set var="$expiry_extension_phrase">{{ phrase('sv_x_years', {'years': $escalatingDefault.expiry_extension}) }}</xf:set>
+						</xf:if>
+						
+						<xf:datarow>
+							<xf:main href="{{ link('warnings/default/edit', $escalatingDefault) }}">
+								<xf:label>{{ phrase('sv_increase_default_expiry_by_x', {'length': $expiry_extension_phrase}) }}</xf:label>
+							</xf:main>
+							<xf:toggle name="active[{$escalatingDefault.warning_default_id}]" selected="$escalatingDefault.active"
+									   class="dataList-cell--separated" submit="true"
+									   tooltip="{{ phrase('enable_disable_x', {'title': $escalatingDefault.MasterTitle.phrase_text}) }}" />
+							<xf:delete href="{{ link('warnings/default/delete', $escalatingDefault) }}" />
+						</xf:datarow>
+					</xf:foreach>
+				</xf:datalist>
+			</div>
+			<div class="block-footer">
+				<span class="block-footer-counter">{{ display_totals($actions) }}</span>
+			</div>
+		</div>
+	</div>
 </xf:if>
