--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_warning_default_edit.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warningimprovements_warning_default_edit.html
@@ -1,14 +1,10 @@
 <xf:if is="$default.isInsert()">
 	<xf:title>{{ phrase('sv_create_new_warning_default') }}</xf:title>
 <xf:else />
-	<xf:title>{{ phrase('sv_edit_warning_default:') }} {{ phrase('points_threshold') }} {$default.points}</xf:title>
+	<xf:title>{{ phrase('sv_edit_warning_default:') }} {{ phrase('points_threshold') }} {$default.threshold_points}</xf:title>
 </xf:if>
 
-<xf:pageaction if="$default.isUpdate()">
-	<xf:button href="{{ link('warnings/actions/delete', $default) }}" icon="delete" overlay="true" />
-</xf:pageaction>
-
-<xf:form action="{{ link('warnings/default/save', $default) }}" ajax="true" class="block">
+<xf:form action="{{ link('warnings/default/save', null, { 'warning_default_id': $default.warning_default_id }) }}" ajax="true" class="block">
 	<div class="block-container">
 		<div class="block-body">
 			<xf:numberboxrow name="threshold_points" value="{$default.threshold_points}" min="1" label="{{ phrase('points_threshold') }}" explain="{{ phrase('sv_warning_default_applied_crossing_threshold') }}" />
