--- a/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_sort.html
+++ b/upload/src/addons/SV/WarningImprovements/_output/templates/admin/sv_warning_sort.html
@@ -2,4 +2,5 @@
 
 <xf:macro template="sv_warning_improvements_warning_tree_macros" name="sortable_form"
 	arg-categoryTree="{$categoryTree}"
+	arg-globalWarnings="{$globalWarnings}"
 	arg-warnings="{$warnings}" />
